--- a/scratch.html
+++ b/scratch.html
@@ -21,7 +21,8 @@
     <a href="#team" class="top-link">Team</a>    
     <a href="#highlights" class="top-link">Highlights</a>
     <a href="#statistics" class="top-link">Statistics</a>
-    <a href="#description" class="top-link">Description</a><br><br>
+    <a href="#description" class="top-link">Description</a>
+    <a href="index.html" class="top-link">Zach Hall's Resume</a><br><br>
 
     
 <div id="team">
