--- a/webapp.html
+++ b/webapp.html
@@ -35,7 +35,7 @@
   </section>
 
   <footer>
-    <p>Created by Clippers Fan. All rights reserved.</p>
+    <p>Created by Zach Hall. All rights reserved.</p>
   </footer>
 
   <script>
